finish reference edits; add pseudocode definition

--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -7,6 +7,22 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@misc{noauthor_json:_nodate,
+	title = {{JSON}: {The} {Fat}-{Free} {Alternative} to {XML}},
+	url = {http://www.json.org/xml.html},
+	urldate = {2017-05-31},
+	file = {JSON\: The Fat-Free Alternative to XML:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZMTK7MH9/xml.html:text/html}
+}
+
+@misc{newman_date_nodate,
+	title = {Date and {Time} on the {Internet}: {Timestamps}},
+	shorttitle = {Date and {Time} on the {Internet}},
+	url = {https://tools.ietf.org/html/rfc3339.html},
+	urldate = {2017-05-31},
+	author = {Newman, Chris and Klyne, Graham},
+	file = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/TESKZJGZ/rfc3339.html:text/html}
+}
+
 @article{white_nine_2013,
 	title = {Nine simple ways to make it easier to (re)use your data},
 	volume = {6},
