update woo/browman citation

--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -7,6 +7,16 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@misc{woo_browman,
+	title = {Data organization in spreadsheets},
+	author = {Browman, Karl and Woo, Kara},
+	url = {https://github.com/dsscollection/data-org-spreadsheets},
+	abstract = {Contribute to data-org-spreadsheets development by creating an account on GitHub.},
+	urldate = {2017-06-01},
+	journal = {GitHub},
+	file = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/JPA7MGWC/manuscript.html:text/html}
+}
+
 @misc{noauthor_json:_nodate,
 	title = {{JSON}: {The} {Fat}-{Free} {Alternative} to {XML}},
 	url = {http://www.json.org/xml.html},
