--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ output:
 
 # Introduction
 
-A set of general principles for sharing data have emerged within the statistics community [@_data_org,@_tidy_data,@wilson_good_2016,@white_nine_2013]. But these principles are not always clear to researchers, scientists, or collaborators generating the data. This has led to a disconnect between those generating data and those analyzing it about the best way for data to be shared. To bridge this divide, we have developed general guidelines for anyone generating data who anticipates their data will be shared with a statistician, data scientist, or analyst at some point during their project. The goals of this guide are to provide some instruction on the best way to share data to avoid the most common pitfalls and sources of delay in the transition from data collection to data analysis [@leek2015opinion]. This guide focuses on data sharing between collaborators and does not directly address best practices for how to make the data behind a published paper available in public repositories. While we do not focus on the pitfalls and specific requirements of that process here, following many of the guidelines we present will be critical during that process as well.
+A set of general principles for sharing data have emerged within the statistics community [@woo_browman,@_tidy_data,@wilson_good_2016,@white_nine_2013]. But these principles are not always clear to researchers, scientists, or collaborators generating the data. This has led to a disconnect between those generating data and those analyzing it about the best way for data to be shared. To bridge this divide, we have developed general guidelines for anyone generating data who anticipates their data will be shared with a statistician, data scientist, or analyst at some point during their project. The goals of this guide are to provide some instruction on the best way to share data to avoid the most common pitfalls and sources of delay in the transition from data collection to data analysis [@leek2015opinion]. This guide focuses on data sharing between collaborators and does not directly address best practices for how to make the data behind a published paper available in public repositories. While we do not focus on the pitfalls and specific requirements of that process here, following many of the guidelines we present will be critical during that process as well.
 
 When it comes to collaborations between data collectors and statisticians, it is a reasonable expectation that the statistician should be able to handle and analyze the data in whatever state they arrive. For this to be possible, the statistician must be provided the raw data, information on any steps taken to preprocess the data, and enough information about the experimental conditions to allow the statistician to identify and incorporate hidden sources of variability into his or her analysis [@baggerly2010disclose]. On the data generator's end, it can be expected that he or she will receive results from a statistician in a reasonable amount of time. From our experience in the Leek group [@_jtleek] (where we work with a large number of collaborators to analyze data) and from conversations with other statisticians, the number one source of delay in the speed of returning results to collaborators is the condition of the data when they arrive. 
 
@@ -87,7 +87,7 @@ The general principles of tidy data have been laid out by Hadley Wickham previou
 
 ![Data Organization **A**. Raw (and tidy) data. The raw measurements taken during the experiment are included here for the 40 patients (rows) and 20 hormones (columns) measured. Indicating that these are raw values conveys that no manipulation or computation has been done on the included values.  **B**. Tidy data. These data convey the important clinical information to your statistician for each sample (rows) across a number of variables (columns).  With a single value included in each cell and consistently and informatively named column headers and values, these tidy data can be easily understood and used by your statistician. Importantly, `PatientID` is coded in the exact same way between Hormone_Data_raw.csv and Demographic_Data.csv enabling easy merging by the statistician. **C**. Code Book. Here, all pertinent and detailed information about both the experiment and the data are conveyed to the statistician. This is the place for any extra detail that does not fit into the data generator’s tidy data tables or spreadsheets. **D**. Pseudocode. This includes information about any processing steps taken to get the data into the form in which the statistician is receiving it.  \label{fig1}](Fig1.pdf)
 
-While these are the most critical decisions, there are a number of additional things that will make your data set much easier to handle [@_data_org] (summarized in **Box\ref{fig1}**). Briefly, it is best to include a row at the top of each data table or spreadsheet that contains informative column names. And, each cell should include only one value or unit of information. Sentences should generally be avoided here; any lengthy explanations should instead be included in the "Code book."
+While these are the most critical decisions, there are a number of additional things that will make your data set much easier to handle [woo_browman] (summarized in **Box\ref{fig1}**). Briefly, it is best to include a row at the top of each data table or spreadsheet that contains informative column names. And, each cell should include only one value or unit of information. Sentences should generally be avoided here; any lengthy explanations should instead be included in the "Code book."
 
 To provide an experimental example, suppose you want to know if individuals with diabetes have altered hormonal profiles. To answer this question, you carry out an experiment in which blood is drawn from 20 individuals with diabetes as well as 20 healthy controls. This blood was used to measure blood levels for 50 different hormones. These measurements would comprise your first 'kind' of data (see #3 above). You have also collected demographic information from the patients including their age, sex, BMI, treatment, and diagnosis (your second "kind" of data). For this example, your first table or spreadsheet would include the measurements for the 20 different hormones. This would have 41 rows (a row for the name of the measured hormones at top and then one row for each of the 40 individuals in your study) and 51 columns (one for `PatientID` and then one for each measurement) (**Figure \ref{fig1}A**). You would have another table or spreadsheet that contains the demographic information. It would have six columns (`PatientID`, `Age`, `Sex`, `BMI`, `CollectionDate`,`Diagnosis`) and 41 rows (a row with variable names, then one row for each patient) (**Figure \ref{fig1}B**).
 
