--- a/README.tex
+++ b/README.tex
@@ -89,7 +89,7 @@ delays in data analysis.
 
 A set of general principles for sharing data have emerged within the
 statistics community
-\citep[\citet{_tidy_data},\citet{wilson_good_2016},\citet{white_nine_2013}]{_data_org}.
+\citep[\citet{_tidy_data},\citet{wilson_good_2016},\citet{white_nine_2013}]{woo_browman}.
 But these principles are not always clear to researchers, scientists, or
 collaborators generating the data. This has led to a disconnect between
 those generating data and those analyzing it about the best way for data
@@ -272,12 +272,12 @@ data into the form in which the statistician is receiving it.
 
 While these are the most critical decisions, there are a number of
 additional things that will make your data set much easier to handle
-\citep{_data_org} (summarized in \textbf{Box\ref{fig1}}). Briefly, it is
-best to include a row at the top of each data table or spreadsheet that
-contains informative column names. And, each cell should include only
-one value or unit of information. Sentences should generally be avoided
-here; any lengthy explanations should instead be included in the ``Code
-book.''
+{[}woo\_browman{]} (summarized in \textbf{Box\ref{fig1}}). Briefly, it
+is best to include a row at the top of each data table or spreadsheet
+that contains informative column names. And, each cell should include
+only one value or unit of information. Sentences should generally be
+avoided here; any lengthy explanations should instead be included in the
+``Code book.''
 
 To provide an experimental example, suppose you want to know if
 individuals with diabetes have altered hormonal profiles. To answer this
