fix figure size

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,7 +85,7 @@ The general principles of tidy data have been laid out by Hadley Wickham previou
 3. There should be one table for each "kind" of data.
 4. If you have multiple tables, they should include a column in the table (with the same column label!) that allows them to be joined or merged (see **Figure \ref{fig1}A-B**).
 
-![Data Organization **A**. Raw (and tidy) data. The raw measurements taken during the experiment are included here for the 40 patients (rows) and 20 hormones (columns) measured. Indicating that these are raw values conveys that no manipulation or computation has been done on the included values.  **B**. Tidy data. These data convey the important clinical information to your statistician for each sample (rows) across a number of variables (columns).  With a single value included in each cell and consistently and informatively named column headers and values, these tidy data can be easily understood and used by your statistician. Importantly, `PatientID` is coded in the exact same way between Hormone_Data_raw.csv and Demographic_Data.csv enabling easy merging by the statistician. **C**. Code Book. Here, all pertinent and detailed information about both the experiment and the data are conveyed to the statistician. This is the place for any extra detail that does not fit into the data generator’s tidy data tables or spreadsheets. **D**. Pseudocode. This includes information about any processing steps taken to get the data into the form in which the statistician is receiving it.  \label{fig1}](Fig1.pdf)
+![Data Organization **A**. Raw (and tidy) data. The raw measurements taken during the experiment are included here for the 40 patients (rows) and 20 hormones (columns) measured. Indicating that these are raw values conveys that no manipulation or computation has been done on the included values.  **B**. Tidy data. These data convey the important clinical information to your statistician for each sample (rows) across a number of variables (columns).  With a single value included in each cell and consistently and informatively named column headers and values, these tidy data can be easily understood and used by your statistician. Importantly, `PatientID` is coded in the exact same way between Hormone_Data_raw.csv and Demographic_Data.csv enabling easy merging by the statistician. **C**. Code Book. Here, all pertinent and detailed information about both the experiment and the data are conveyed to the statistician. This is the place for any extra detail that does not fit into the data generator’s tidy data tables or spreadsheets. **D**. Pseudocode. This includes information about any processing steps taken to get the data into the form in which the statistician is receiving it.  \label{fig1}](Fig1.pdf){width=100%}
 
 While these are the most critical decisions, there are a number of additional things that will make your data set much easier to handle [@woo_browman] (summarized in **Box\ref{fig1}**). Briefly, it is best to include a row at the top of each data table or spreadsheet that contains informative column names. And, each cell should include only one value or unit of information. Sentences should generally be avoided here; any lengthy explanations should instead be included in the "Code book."
 
@@ -94,7 +94,7 @@ To provide an experimental example, suppose you want to know if individuals with
 With regards to the formatting of these data, if you are sharing your data with the collaborator in Excel, the tidy data should be in one Excel file per table. They should not have multiple worksheets, no macros should be applied to the data, and no cells should be highlighted. Alternatively, the data could be shared in either a CSV or TAB-delimited text file. Caution should always be taken when reading CSV files into Excel as it can sometimes lead to non-reproducible handling of date variables, time variables, and variables that Excel incorrectly assumes are date or time variables [@zeeberg_mistaken_2004]. For example, Excel incorrectly assumes the gene `SEPT9` is the date `Sept-9` due to  default date format conversions. Floating-point format conversions cause similar problems. To avoid these issues, use ISO 8601 [@newman_date_nodate] guidelines when coding date and time variables. (See **Box\ref{box1}**). Whenever data is being formatted, the person tidying the data must be extremely careful that no unintended alterations have been made. Spot checking data after tidying, which includes, but is not limited to, ensuring the correct number of columns and rows are present and that column labels are accurate and consistent across spreadsheets, is crucial. 
 
    
-![Box1 \label{box1}](Box1.pdf)
+![Box1 \label{box1}](Box1.pdf){width=100%}
 
 ## The code book
 For almost any data set, the measurements you calculate will need to be described in more detail than you can or should sneak into the spreadsheet. The code book (also referred to as a 'data dictionary') contains this information. At a minimum it should contain:
