--- a/README.tex
+++ b/README.tex
@@ -247,7 +247,7 @@ R \citep{_r}, the principles are more generally applicable:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{Fig1.pdf}
+\includegraphics[width=1.00000\textwidth]{Fig1.pdf}
 \caption{Data Organization \textbf{A}. Raw (and tidy) data. The raw
 measurements taken during the experiment are included here for the 40
 patients (rows) and 20 hormones (columns) measured. Indicating that
@@ -320,7 +320,7 @@ consistent across spreadsheets, is crucial.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{Box1.pdf}
+\includegraphics[width=1.00000\textwidth]{Box1.pdf}
 \caption{Box1 \label{box1}}
 \end{figure}
 
